# MauriGL

./: Cargo.toml  LICENSE  README.md  run it.bat
resources/meshes/: abstract.mtl  abstract2.mtl  gizmo.mtl
resources/shaders/: frag-shader.glsl  vert-shader.glsl
shaders/: frag-shader.glsl
src/: camera.rs  main.rs  mesh.rs  transform.rs
