[package]
name = "customgl"
version = "0.1.0"
authors = ["Mauricio (win10)"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.26.0"
glam = "0.9.5"
image = "*"
const-tweaker = "0.3.1"
obj-rs = { version = "0.6", features = ["glium"] }